Desktop/desarollo de aplicaciones webb/despliegue de aplicaciones web/App/letschat-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: letschat
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: http-server
  selector:
    app: letschat
