Desktop/desarollo de aplicaciones webb/despliegue de aplicaciones web/App/mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo
  selector:
    app: mongo
