Desktop/desarollo de aplicaciones webb/despliegue de aplicaciones web/App/ingress_guestbook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
spec:
  rules:
  - host: www.juanpedro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook
            port:
              number: 80
